--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-spinner *ngIf="isLoading === true"></mat-spinner>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
     <form *ngIf="!isLoading" (submit)="onLogin(loginForm)" #loginForm="ngForm">
         <mat-form-field>
             <input matInput
@@ -18,13 +18,12 @@
                 name="password" 
                 ngModel 
                 #passwordInput="ngModel" 
-                required
-                >
+                required>
                 <mat-error *ngIf="!passwordInput.valid">Please enter a valid password</mat-error>
             </mat-form-field>
             <button mat-raised-button
             color="accent"
-             type="submit" [disabled]="!loginForm.valid">Login</button> 
+             type="submit" [disabled]="!loginForm.valid || isLoading">Login</button>
     </form>
   </mat-card>
   
